<resources>
    <string name="app_name">Simple Tracker</string>
    <string name="new_event_button">New Event</string>
    <string name="view_event_button">View Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attend">Attend</string>
    <string name="action_export">Export</string>
    <string name="action_reload">Reload</string>
    <string name="all_item_button">View Attendance</string>
    <string name="mark_item_button">Mark Attendance</string>
    <string name="action_clear">Clear</string>
    <string name="action_mail">Mail</string>
    <string name="download_button">Download</string>
</resources>
