<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_menu_clear"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom|withText"/>
    <group android:id="@+id/mark_menu_group">
        <!-- Settings, should always be in the overflow -->
        <item android:id="@+id/action_reload"
              android:icon="@drawable/ic_menu_reload"
              android:title="@string/action_reload"
              app:showAsAction="ifRoom|withText"/>
    </group>

    <group android:id="@+id/view_menu_group">
        <item
            android:id="@+id/action_mail"
            android:icon="@drawable/ic_menu_mail"
            android:title="@string/action_mail"
            app:showAsAction="ifRoom|withText"/>
        <!--<item-->
            <!--android:id="@+id/action_export"-->
            <!--android:icon="@drawable/ic_menu_export"-->
            <!--android:title="@string/action_export"-->
            <!--app:showAsAction="ifRoom|withText"/>-->
    </group>

</menu>