<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.unicorn.simpletracker.MainActivity">

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/my_toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--android:elevation="4dp"-->
        <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

    <Button
        android:id="@+id/new_event_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_event_button"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/view_event_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_event_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/new_event_button"/>
    <Button
        android:id="@+id/download_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/view_event_button"/>

</RelativeLayout>
